objects/ACP_Account_Plan__c.object
<CustomObject>
    <description>Hari 04/24/17 – Created for Account Plan</description>
    <fields>
        <fullName>ACP_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hari 04/24/17 – Created for Account Plan</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ACP_Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACP_Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Hari 04/24/17 – Created for Account Plan</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ACP Account Plans</relationshipLabel>
        <relationshipName>Account_Plans7</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACP_Account_Summary__c</fullName>
        <description>Esther 04/25/17 – Created for Account Plan</description>
        <label>Account Summary</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Company_Logo_Image__c</fullName>
        <description>Hari created to store URL of company logo.</description>
        <label>Company Logo Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Competitor_Img1_Name__c</fullName>
        <label>Competitor Img1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Competitor_Img1__c</fullName>
        <description>Hari created to store URL of Competitor image</description>
        <label>Competitor Image 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Competitor_Img2_Name__c</fullName>
        <label>Competitor Img2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Competitor_Img2__c</fullName>
        <description>Hari created to store URL of Competitor image</description>
        <label>Competitor Image 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Competitor_Img3_Name__c</fullName>
        <label>Competitor Img3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Competitor_Img3__c</fullName>
        <description>Hari created to store URL of Competitor image</description>
        <label>Competitor Image 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Conga_Attachement__c</fullName>
        <description>created to select email attachments and on change it will fire conga workflow</description>
        <label>Conga Attachement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                    <default>true</default>
                    <label>Off</label>
                </value>
                <value>
                    <fullName>PPT</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Revenue Bridge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Customer_Challenges_and_Threats__c</fullName>
        <description>Hari 04/24/17 – Created for Account Plan</description>
        <label>Customer Challenges and Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Customer_Major_Growth_Areas__c</fullName>
        <description>Hari 04/24/17 – Created for Account Plan</description>
        <label>Customer Major Growth Areas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Customer_Strategy_Summary__c</fullName>
        <description>Hari 04/24/17 – Created for Account Plan</description>
        <label>Customer Strategy Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Customer_Website__c</fullName>
        <description>Hari 04/24/17 – Created for Account Plan</description>
        <formula>ACP_Account_Name__r.Website</formula>
        <label>Customer Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_GAMCode__c</fullName>
        <formula>ACP_Account_Name__r.GAMCD__c</formula>
        <label>GAM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_KAMCode__c</fullName>
        <formula>ACP_Account_Name__r.IND_KAM_Code__c</formula>
        <label>KAM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Product_Image1__c</fullName>
        <description>Hari created to store URL of the product image.</description>
        <label>Product Image 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Product_Image2__c</fullName>
        <description>Hari created to store URL of product image</description>
        <label>Product Image 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Product_Image3__c</fullName>
        <description>Hari created to store URL of the product image</description>
        <label>Product Image 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Product_Img1_Name__c</fullName>
        <label>Product Img1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Product_Img2_Name__c</fullName>
        <label>Product Img2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Product_Img3_Name__c</fullName>
        <label>Product Img3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Revenue_Type__c</fullName>
        <description>This is for holding the Revenue Type (Direct, POS, CMA) for the Revenue Bridge.</description>
        <label>ACP Revenue Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Snapshot_Q1__c</fullName>
        <formula>DATE(2018,10,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACP Snapshot Q1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACP_Snapshot_Q2__c</fullName>
        <formula>DATE(2018,01,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACP Snapshot Q2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACP_Snapshot_Q3__c</fullName>
        <formula>DATE(2018,04,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACP Snapshot Q3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACP_WWAcNo__c</fullName>
        <formula>ACP_Account_Name__r.WWCORPACCT__c</formula>
        <label>WW Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Conductor__c</fullName>
        <description>##Conga created btn:00b0S000000DmHj
##Conga updated btn:00b0S000000DnY2</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id + 
&quot;&amp;QueryId=[FrontPage]a6h0L0000008OSD,[ACPTask]a6h0L0000008OSE,[ACPAttachment]a6h0L0000008OSH,[ApplicationBreakdown]a6h0L0000008OSF,[BusPerfComment]a6h0L0000008OSB,[CustOverview]a6h0L0000008OSC,[CustOverEndMarkets]a6h0L0000008OSR,[CustOverKeyEngDes]a6h0L0000008OSU,[CustOverKeyManPurch]a6h0L0000008OST,[CustOverKeyVendors]a6h0L0000008OSV,[CustOverRegions]a6h0L0000008OSS,[CustOverRevGrowth]a6h0L0000008OSQ,[EngrStakeholderRelat]a6h0L0000008OS1,[ExecStakeholderRelat]a6h0L0000008OS2,[GenericStakeholder]a6h0L0000008OSO,[MktCompDetail]a6h0L0000008OS6,[MktCompSummary]a6h0L0000008OS4,[OpptyTamRev]a6h0L0000008OS5,[PurchStakeholderRela]a6h0L0000008OS7,[RevenueGrowth]a6h0L0000008OSA,[Strategy]a6h0L0000008OS0,[SupplierEvaluation]a6h0L0000008OS8,[SupplierRating]a6h0L0000008OS9,[TopOpenOpptys]a6h0L0000008OS3&quot; + 
&quot;&amp;templateid=a270L00000501KD&quot; + 
&quot;&amp;emailsubject=Account Plan PDF&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;emailfromid=0D20L000000GptY&quot; + 
&quot;&amp;emailadditionalto=&quot; + Owner:User.Email + 
&quot;&amp;qmode=Attachments&quot; + 
&quot;&amp;emailtemplateid=a260L000001ctur&quot;</formula>
        <label>Account Plan Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Type__c</fullName>
        <description>This is used when the Account Plan is created to denote the type of Account Plan being created. The Sold-to type is for one Account Record, the other types are collection of Account Records.</description>
        <inlineHelpText>Select the type of Account Plan</inlineHelpText>
        <label>Account Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sold-to Account</fullName>
                </value>
                <value>
                    <fullName>GAM Account</fullName>
                </value>
                <value>
                    <fullName>KAM Account</fullName>
                </value>
                <value>
                    <fullName>WW Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Account_Plan__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This checkbox denotes whether the Account Plan is Active or not. It will not have a snapshot taken if it is inactive.</description>
        <inlineHelpText>Is this an Active Account Plan?</inlineHelpText>
        <label>Active Account Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Account_Manager_Image__c</fullName>
        <description>Text field to store the Account manage&apos;s image</description>
        <label>Conga Account Manager Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Customer_Overview_Report__c</fullName>
        <formula>HYPERLINK(&quot;/00O0S000000Jfx0?pv0=&quot;&amp; ACP_Account_Name__c,&quot;Test&quot;)</formula>
        <label>Conga Customer Overview Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_PDF_Workflow_Test__c</fullName>
        <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot;
+  $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + PDF_Account_Plan_workflow_Formula__c, &quot;PDF Workflow Test&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga PDF Workflow Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_PPT_Workflow_Test__c</fullName>
        <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot;
+  $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + PPT_Account_Plan_workflow_formula__c, &quot;PPT Workflow Test&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga PPT Workflow Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Account_Plan_Workflow_Formula1__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;QueryId=[FrontPage]a6h0L0000008OSD,[ACPTask]a6h0L0000008OSE,[ACPAttachment]a6h0L0000008OSH,[ApplicationBreakdown]a6h0L0000008OSF,[BusPerfComment]a6h0L0000008OSB,[CustOverview]a6h0L0000008OSC,[CustOverEndMarkets]a6h0L0000008OSR,[CustOverKeyEngDes]a6h0L0000008OSU,[CustOverKeyManPurch]a6h0L0000008OST,[CustOverKeyVendors]a6h0L0000008OSV,[CustOverRegions]a6h0L0000008OSS,[CustOverRevGrowth]a6h0L0000008OSQ,[EngrStakeholderRelat]a6h0L0000008OS1,[ExecStakeholderRelat]a6h0L0000008OS2,[GenericStakeholder]a6h0L0000008OSO,[MktCompDetail]a6h0L0000008OS6,[MktCompSummary]a6h0L0000008OS4,[OpptyTamRev]a6h0L0000008OS5,[PurchStakeholderRela]a6h0L0000008OS7,[RevenueGrowth]a6h0L0000008OSA,[Strategy]a6h0L0000008OS0,[SupplierEvaluation]a6h0L0000008OS8,[SupplierRating]a6h0L0000008OS9,[TopOpenOpptys]a6h0L0000008OS3&quot; + 
&quot;&amp;templateid=a270L00000501KD&quot; + 
&quot;&amp;emailsubject=Account Plan PDF&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;emailfromid=0D20L000000GptY&quot; + 
&quot;&amp;emailadditionalto=&quot; + Owner:User.Email + 
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;emailtemplateid=a260L000001ctur&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF Account Plan Workflow Formula1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Account_Plan_workflow_Formula__c</fullName>
        <description>##Conga created btn:00b0S000000DnY2
##Conga updated btn:00b0S000000DnY2</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;QueryId=[FrontPage]a6h0L0000008OSD,[ACPTask]a6h0L0000008OSE,[ACPAttachment]a6h0L0000008OSH,[ApplicationBreakdown]a6h0L0000008OSF,[BusPerfComment]a6h0L0000008OSB,[CustOverview]a6h0L0000008OSC,[CustOverEndMarkets]a6h0L0000008OSR,[CustOverKeyEngDes]a6h0L0000008OSU,[CustOverKeyManPurch]a6h0L0000008OST,[CustOverKeyVendors]a6h0L0000008OSV,[CustOverRegions]a6h0L0000008OSS,[CustOverRevGrowth]a6h0L0000008OSQ,[EngrStakeholderRelat]a6h0L0000008OS1,[ExecStakeholderRelat]a6h0L0000008OS2,[GenericStakeholder]a6h0L0000008OSO,[MktCompDetail]a6h0L0000008OS6,[MktCompSummary]a6h0L0000008OS4,[OpptyTamRev]a6h0L0000008OS5,[PurchStakeholderRela]a6h0L0000008OS7,[RevenueGrowth]a6h0L0000008OSA,[Strategy]a6h0L0000008OS0,[SupplierEvaluation]a6h0L0000008OS8,[SupplierRating]a6h0L0000008OS9,[TopOpenOpptys]a6h0L0000008OS3&quot; +
&quot;&amp;templateid=a270L00000501KD&quot; + 
&quot;&amp;emailsubject=Account Plan PDF&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;emailfromid=0D20L000000GptY&quot; + 
&quot;&amp;emailadditionalto=&quot; + Owner:User.Email +
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;emailtemplateid=a260L000001ctur&quot;</formula>
        <label>PDF Account Plan workflow Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPT_Account_Plan_workflow_formula__c</fullName>
        <description>##Conga created btn:00b0S000000DnY7
##Conga updated btn:00b0S000000DnY7</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;QueryId=[FrontPage]a6h0L0000008OSD,[ACPTask]a6h0L0000008OSE,[ACPAttachment]a6h0L0000008OSH,[ApplicationBreakdown]a6h0L0000008OSF,[BusPerfComment]a6h0L0000008OSB,[CustOverview]a6h0L0000008OSC,[CustOverEndMarkets]a6h0L0000008OSR,[CustOverKeyEngDes]a6h0L0000008OSU,[CustOverKeyManPurch]a6h0L0000008OST,[CustOverKeyVendors]a6h0L0000008OSV,[CustOverRegions]a6h0L0000008OSS,[CustOverRevGrowth]a6h0L0000008OSQ,[EngrStakeholderRelat]a6h0L0000008OS1,[ExecStakeholderRelat]a6h0L0000008OS2,[GenericStakeholder]a6h0L0000008OSO,[MktCompDetail]a6h0L0000008OS6,[MktCompSummary]a6h0L0000008OS4,[OpptyTamRev]a6h0L0000008OS5,[PurchStakeholderRela]a6h0L0000008OS7,[RevenueGrowth]a6h0L0000008OSA,[Strategy]a6h0L0000008OS0,[SupplierEvaluation]a6h0L0000008OS8,[SupplierRating]a6h0L0000008OS9,[TopOpenOpptys]a6h0L0000008OS3,[RBLabels]a6h0L0000008OSM&quot; + 
&quot;&amp;emailtemplateid=a260L000001ctur&quot; +
&quot;&amp;EmailSubject=Account Plan PowerPoint&quot; +
&quot;&amp;EmailFromId=0D20L000000GptY&quot; +
&quot;&amp;TemplateId=a270L00000501vM&quot;  +
&quot;&amp;emailadditionalto=&quot; + Owner:User.Email + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>PPT Account Plan workflow formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Bridge__c</fullName>
        <description>##Conga created btn:00b0S000000I13L
##Conga updated btn:00b0S000000I13L</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[RevenueBridgeDirect]a6h0L0000008OSW,[RevenueGrowthCMA]a6h0L0000008OSY,[RevenueBridgePOS]a6h0L0000008OSZ,[RevenueBridgeCombo]a6h0L0000008OSa&quot; +  
&quot;&amp;emailsubject=Account Plan Revenue Bridge&quot; +
&quot;&amp;emailfromid=0D20L000000GptY&quot; + 
&quot;&amp;emailadditionalto=&quot; + Owner:User.Email + 
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;templateid=a270L00000501KN&quot; + 
&quot;&amp;emailtemplateid=a260L000001ctvV&quot;</formula>
        <label>Revenue Bridge Workflow Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Day__c</fullName>
        <formula>TODAY() = ACP_Snapshot_Q1__c || TODAY() = ACP_Snapshot_Q2__c || TODAY() = ACP_Snapshot_Q3__c || TODAY() = ACP_Snapshot_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TE_Business_Performance_Comment__c</fullName>
        <description>Hari 2/6/17 Added for Account Plan.</description>
        <label>TE’s Business Performance Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ACP Account Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACP_Account_Name__c</columns>
        <columns>ACP_Account_Manager__c</columns>
        <columns>Account_Plan_Type__c</columns>
        <columns>Active_Account_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ACP_Account_Plans</fullName>
        <columns>ACP_Account_Name__c</columns>
        <columns>Account_Plan_Type__c</columns>
        <columns>ACP_Account_Manager__c</columns>
        <columns>Active_Account_Plan__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All ACP Account Plans</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_ACP_Account_Plans</fullName>
        <columns>ACP_Account_Name__c</columns>
        <columns>Account_Plan_Type__c</columns>
        <columns>ACP_Account_Manager__c</columns>
        <columns>Active_Account_Plan__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My ACP Account Plans</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACP Account Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>